sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:10: error: ')' expected but 'while' found.
    	while(j<getNombreValeurs-2 & plusPetit(j+1,j)){
        ^